# VeritasLayer

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  methodology.md
scripts/: generate_benchmark_report.py
src/veritaslayer/: __init__.py
src/veritaslayer/cli/: main.py
src/veritaslayer/core/: credibility.py  fingerprinting.py  forensic.py  propagation.py
src/veritaslayer/models/: __init__.py
src/veritaslayer/utils/: report.py
tests/unit/: test_credibility.py  test_fingerprinting.py  test_forensic.py
