[project]
name = "veritaslayer"
version = "0.1.0"
description = "Research-grade digital content authenticity verification engine"
authors = [{name = "SarcasticApeSquad", email = "your@email.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
veritaslayer = "veritaslayer.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
